k8s/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
     - port: 8089
       targetPort: 8089
